[workspace]

members = ["omr_core"]

resolver = "2"

[workspace.dependencies]
tracing = "0.1"
thiserror = "2"
num-traits = "0.2"
rand_core = "0.6"
rand = "0.8"
rand_distr = "0.4"
itertools = "0.14"
rayon = "1.10"

algebra = { git = "https://github.com/serendipity-crypto/primus-fhe", branch = "omr", default-features = false }
lattice = { git = "https://github.com/serendipity-crypto/primus-fhe", branch = "omr", default-features = false }
fhe_core = { git = "https://github.com/serendipity-crypto/primus-fhe", branch = "omr", default-features = false }

# algebra = { path = "../primus-fhe/algebra", default-features = false }
# lattice = { path = "../primus-fhe/lattice", default-features = false }
# fhe_core = { path = "../primus-fhe/fhe_core", default-features = false }

criterion = "0.5"

[profile.bench]
lto = true
codegen-units = 1
