[package]
name = "omr_core"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { workspace = true }
lattice = { workspace = true }
fhe_core = { workspace = true }

tracing = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "time",
    "local-time",
] }
indicatif = { version = "0.17.9", features = ["rayon"] }
criterion = { workspace = true }

[features]
default = ["concrete-ntt"]
concrete-ntt = [
    "algebra/concrete-ntt",
    "lattice/concrete-ntt",
    "fhe_core/concrete-ntt",
]
nightly = ["algebra/nightly", "lattice/nightly", "fhe_core/nightly"]

[[bench]]
name = "omr"
harness = false
